minimum required version is now 21